set MainActivity as a parent of RecipesActivity and RecipesActivity as parent of RecipeDetailsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecipesActivity" />
-        <activity android:name=".RecipeDetailsActivity"></activity>
+        <activity android:name=".RecipesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.guest.recipefinder.MainActivity" />
+        </activity>
+        <activity android:name=".RecipeDetailsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.guest.recipefinder.RecipesActivity" />
+        </activity>
     </application>
 
 </manifest>
