--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'API_KEY', ApiKey
+    }
 }
 
 dependencies {
@@ -39,4 +43,5 @@ dependencies {
     androidTestCompile('com.android.support.test:runner:0.3') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
