rename RecipesActivity as RecipeListActivity and RecipeDetailsActivity as RecipeDetailActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.RecipesActivity">
+        <activity android:name=".ui.RecipeListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.RecipeDetailsActivity">
+        <activity android:name=".ui.RecipeDetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.RecipesActivity" />
+                android:value=".ui.RecipeListActivity" />
         </activity>
     </application>
 
