--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/notice.txt'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,6 +43,7 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'APP_KEY', AppKey
         it.buildConfigField 'String', 'APP_ID', AppId
+        it.buildConfigField 'String', 'FIREBASE_ROOT_URL', FirebaseRootUrl
     }
 }
 
@@ -51,4 +66,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
+    compile 'com.firebase:firebase-client-android:2.3.1'
 }
