--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.guest.recipefinder">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".RecipeFinderApplication"
@@ -22,8 +23,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.RecipeDetailActivity">
-        </activity>
+        <activity android:name=".ui.RecipeDetailActivity"></activity>
+        <activity android:name=".ui.SavedRecipeListActivity"></activity>
     </application>
 
 </manifest>
